{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 17,
  "lineage": "6a16980a-044e-edc5-596c-9c7affb87935",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-vpc-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:000288798409:instance/i-0a8705e8b576acf71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8705e8b576acf71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fe33bfe24f43294",
            "private_dns": "ip-10-5-0-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.0.205",
            "public_dns": "ec2-54-90-217-244.compute-1.amazonaws.com",
            "public_ip": "54.90.217.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f0639b19e3876503",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-060129fe6284ceb07"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aaffe3b79bfed96",
            "tags": {
              "Name": "EC2 VPC A - AZ1"
            },
            "tags_all": {
              "Name": "EC2 VPC A - AZ1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060129fe6284ceb07"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_a",
            "module.vpc-a.aws_subnet.public",
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:security-group/sg-060129fe6284ceb07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060129fe6284ceb07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_vpc_a",
            "name_prefix": "",
            "owner_id": "000288798409",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:network-acl/acl-0e356a10dc8546724",
            "default_network_acl_id": "acl-0e356a10dc8546724",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e356a10dc8546724",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000288798409",
            "subnet_ids": [
              "subnet-08aaffe3b79bfed96",
              "subnet-0f4edb7e03c81df3e"
            ],
            "tags": {
              "Name": "vpc-a-default"
            },
            "tags_all": {
              "Name": "vpc-a-default"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:route-table/rtb-0d27877e9ef10ae8e",
            "default_route_table_id": "rtb-0d27877e9ef10ae8e",
            "id": "rtb-0d27877e9ef10ae8e",
            "owner_id": "000288798409",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-a-default"
            },
            "tags_all": {
              "Name": "vpc-a-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:security-group/sg-05d1833e1e748c395",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05d1833e1e748c395",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000288798409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-a-default"
            },
            "tags_all": {
              "Name": "vpc-a-default"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:internet-gateway/igw-03390c68c3ebedcc3",
            "id": "igw-03390c68c3ebedcc3",
            "owner_id": "000288798409",
            "tags": {
              "Name": "vpc-a"
            },
            "tags_all": {
              "Name": "vpc-a"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "dependencies": [
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03390c68c3ebedcc3",
            "id": "r-rtb-02243be7b50bdd7f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02243be7b50bdd7f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_internet_gateway.this",
            "module.vpc-a.aws_route_table.public",
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:route-table/rtb-02243be7b50bdd7f6",
            "id": "rtb-02243be7b50bdd7f6",
            "owner_id": "000288798409",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-a-public"
            },
            "tags_all": {
              "Name": "vpc-a-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf6808adec73df1",
            "route_table_id": "rtb-02243be7b50bdd7f6",
            "subnet_id": "subnet-08aaffe3b79bfed96"
          },
          "dependencies": [
            "module.vpc-a.aws_route_table.public",
            "module.vpc-a.aws_subnet.public",
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e05d18270b68deca",
            "route_table_id": "rtb-02243be7b50bdd7f6",
            "subnet_id": "subnet-0f4edb7e03c81df3e"
          },
          "dependencies": [
            "module.vpc-a.aws_route_table.public",
            "module.vpc-a.aws_subnet.public",
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-08aaffe3b79bfed96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.5.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aaffe3b79bfed96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-a-public-us-east-1a"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "dependencies": [
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-0f4edb7e03c81df3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4edb7e03c81df3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-a-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-a-public-us-east-1b"
            },
            "vpc_id": "vpc-069403aa2a08860f7"
          },
          "dependencies": [
            "module.vpc-a.aws_vpc.this",
            "module.vpc-a.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-a",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:vpc/vpc-069403aa2a08860f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0e356a10dc8546724",
            "default_route_table_id": "rtb-0d27877e9ef10ae8e",
            "default_security_group_id": "sg-05d1833e1e748c395",
            "dhcp_options_id": "dopt-0606ad1dd7528cdab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069403aa2a08860f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d27877e9ef10ae8e",
            "owner_id": "000288798409",
            "tags": {
              "Name": "vpc-a"
            },
            "tags_all": {
              "Name": "vpc-a"
            }
          }
        }
      ]
    }
  ]
}